# ACP-Chatbot

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: pages.yml
crates/acpc_app/: Cargo.toml  tauri.conf.json
crates/acpc_app/capabilities/: default.json
crates/acpc_app/src/: main.rs
crates/acpc_app/ui/: index.html
crates/acpc_app/ui/src/: App.vue  style.css  themes.ts
crates/acpc_core/: Cargo.toml
crates/acpc_core/src/: app_state.rs  highlight.rs  lib.rs  markdown.rs
crates/acpc_protocol/: Cargo.toml
crates/acpc_protocol/examples/: bridge.rs  chat.rs  handshake.rs  spawn.rs
crates/acpc_protocol/src/: error.rs  lib.rs  protocol.rs  settings.rs  subprocess.rs
crates/acpc_protocol/tests/: bridge.rs  protocol.rs  subprocess.rs
docs/: ARCHITECTURE.md
site/: blog.html  index.html  style.css
